More styling adjustments.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,9 +26,9 @@
 @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
-@include foundation-close-button;
+@include foundation-close-button;*/
 @include foundation-menu;
-@include foundation-menu-icon;
+/*@include foundation-menu-icon;
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
