--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,4 +53,4 @@
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;*/
-// @include foundation-flex-classes;
+@include foundation-flex-classes;
