--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,7 +13,7 @@
 @include foundation-global-styles;
 //@include foundation-grid;
 @include foundation-flex-grid;
-// @include foundation-typography;
+//@include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
 // @include foundation-range-input;
@@ -47,9 +47,9 @@
 @include foundation-thumbnail;
 @include foundation-title-bar;
 @include foundation-tooltip;
-@include foundation-top-bar;
+@include foundation-top-bar;*/
 @include foundation-visibility-classes;
-@include foundation-float-classes;*/
+//@include foundation-float-classes;
 @include foundation-flex-classes;
 
 // Sites imports
