--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1703,6 +1703,33 @@ select {
       -webkit-transition: 700ms box-shadow;
       transition: 700ms box-shadow; }
 
+.accordion__heading {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+  .accordion__heading--active, .accordion__heading:hover {
+    background-color: #ddd; }
+
+.accordion__content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: 0.6s ease-in-out;
+  transition: 0.6s ease-in-out;
+  opacity: 0; }
+  .accordion__content--active {
+    opacity: 1;
+    max-height: 1500px; }
+
 .-text-center {
   text-align: center; }
 
