--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -14,6 +14,10 @@
     &--active, &:hover {
       background-color: #ddd;
     }
+
+    &--disabled {
+      opacity: 0.3;
+    }
   }
 
   &__content {
