--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1735,4 +1735,160 @@ select {
 .-text-center {
   text-align: center; }
 
+.windows8 {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  margin: auto; }
+
+.windows8 .wBall {
+  position: absolute;
+  width: 23px;
+  height: 23px;
+  opacity: 0;
+  transform: rotate(225deg);
+  -o-transform: rotate(225deg);
+  -ms-transform: rotate(225deg);
+  -webkit-transform: rotate(225deg);
+  -moz-transform: rotate(225deg);
+  animation: orbit 4.5325s infinite;
+  -o-animation: orbit 4.5325s infinite;
+  -ms-animation: orbit 4.5325s infinite;
+  -webkit-animation: orbit 4.5325s infinite;
+  -moz-animation: orbit 4.5325s infinite; }
+
+.windows8 .wBall .wInnerBall {
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background: black;
+  left: 0px;
+  top: 0px;
+  border-radius: 3px; }
+
+.windows8 #wBall_1 {
+  animation-delay: 0.986s;
+  -o-animation-delay: 0.986s;
+  -ms-animation-delay: 0.986s;
+  -webkit-animation-delay: 0.986s;
+  -moz-animation-delay: 0.986s; }
+
+.windows8 #wBall_2 {
+  animation-delay: 0.193s;
+  -o-animation-delay: 0.193s;
+  -ms-animation-delay: 0.193s;
+  -webkit-animation-delay: 0.193s;
+  -moz-animation-delay: 0.193s; }
+
+.windows8 #wBall_3 {
+  animation-delay: 0.3965s;
+  -o-animation-delay: 0.3965s;
+  -ms-animation-delay: 0.3965s;
+  -webkit-animation-delay: 0.3965s;
+  -moz-animation-delay: 0.3965s; }
+
+.windows8 #wBall_4 {
+  animation-delay: 0.5895s;
+  -o-animation-delay: 0.5895s;
+  -ms-animation-delay: 0.5895s;
+  -webkit-animation-delay: 0.5895s;
+  -moz-animation-delay: 0.5895s; }
+
+.windows8 #wBall_5 {
+  animation-delay: 0.793s;
+  -o-animation-delay: 0.793s;
+  -ms-animation-delay: 0.793s;
+  -webkit-animation-delay: 0.793s;
+  -moz-animation-delay: 0.793s; }
+
+@keyframes orbit {
+  0% {
+    opacity: 1;
+    z-index: 99;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  7% {
+    opacity: 1;
+    -webkit-transform: rotate(300deg);
+    transform: rotate(300deg);
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    origin: 0%; }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(410deg);
+    transform: rotate(410deg);
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    origin: 7%; }
+  39% {
+    opacity: 1;
+    -webkit-transform: rotate(645deg);
+    transform: rotate(645deg);
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    origin: 30%; }
+  70% {
+    opacity: 1;
+    -webkit-transform: rotate(770deg);
+    transform: rotate(770deg);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    origin: 39%; }
+  75% {
+    opacity: 1;
+    -webkit-transform: rotate(900deg);
+    transform: rotate(900deg);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    origin: 70%; }
+  76% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+    transform: rotate(900deg); }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+    transform: rotate(900deg); } }
+
+@-webkit-keyframes orbit {
+  0% {
+    opacity: 1;
+    z-index: 99;
+    -webkit-transform: rotate(180deg);
+    -webkit-animation-timing-function: ease-out; }
+  7% {
+    opacity: 1;
+    -webkit-transform: rotate(300deg);
+    -webkit-animation-timing-function: linear;
+    -webkit-origin: 0%; }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(410deg);
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-origin: 7%; }
+  39% {
+    opacity: 1;
+    -webkit-transform: rotate(645deg);
+    -webkit-animation-timing-function: linear;
+    -webkit-origin: 30%; }
+  70% {
+    opacity: 1;
+    -webkit-transform: rotate(770deg);
+    -webkit-animation-timing-function: ease-out;
+    -webkit-origin: 39%; }
+  75% {
+    opacity: 1;
+    -webkit-transform: rotate(900deg);
+    -webkit-animation-timing-function: ease-out;
+    -webkit-origin: 70%; }
+  76% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg); }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg); } }
+
 /*# sourceMappingURL=app.css.map */
