Added sweet alert in

--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -40,9 +40,9 @@
     border-color:hsl(120, 50%, 50%);
   }
 
-  input:invalid,
+  /*input:invalid,
   input:out-of-range {
     border-color:hsl(0, 50%, 50%);
     background:hsl(0, 50%, 90%);
-  }
+  }*/
 }
