Disable and remove cursor from unavilable application pieces.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2721,7 +2721,8 @@ body.stop-scrolling {
     .accordion__heading--active, .accordion__heading:hover {
       background-color: #ddd; }
     .accordion__heading--disabled {
-      opacity: 0.3; }
+      opacity: 0.65;
+      cursor: not-allowed; }
   .accordion__content {
     padding: 0 18px;
     background-color: white;
