Layout to the admin section.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2741,6 +2741,9 @@ body.stop-scrolling {
 .-text-center {
   text-align: center; }
 
+.-text-right {
+  text-align: right; }
+
 .windows8 {
   position: relative;
   width: 24px;
@@ -2896,5 +2899,21 @@ body.stop-scrolling {
   100% {
     opacity: 0;
     -webkit-transform: rotate(900deg); } }
+
+.admin-menu {
+  background-color: #efefef;
+  box-shadow: 0px 0 1px #000;
+  height: 94.5vh; }
+  .admin-menu__links {
+    padding-left: 0; }
+  .admin-menu__link {
+    color: #000;
+    text-decoration: none;
+    font-size: 18px; }
+    .admin-menu__link:hover {
+      background-color: #C1C1C1; }
+
+.application {
+  background-color: #ddd; }
 
 /*# sourceMappingURL=app.css.map */
