--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,9 +33,9 @@
 @include foundation-label;
 @include foundation-media-object;
 @include foundation-off-canvas;
-@include foundation-orbit;
+@include foundation-orbit;*/
 @include foundation-pagination;
-@include foundation-progress-bar;*/
+// @include foundation-progress-bar;
 // @include foundation-progress-element;
 // @include foundation-meter-element;
 /*@include foundation-slider;
