Updated to the units page and the start of the UI Kit build

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -16,6 +16,24 @@ $brand-success: #2ab27b;
 $brand-warning: #cbb956;
 $brand-danger:  #bf5329;
 
+// Colours
+
+$focused: #1b696e;
+$white: #ffffff;
+$breeze: #73cfcd;
+$amped: #0afcea;
+$concrete: #4a494b;
+$alarmed: #ff9f02;
+$slate: #9a989b;
+$exuberant: #f73179;
+$mist: #dfdfdf;
+$blazed: #ff7902;
+$leafed: #61aead;
+$clouded: #f6f6f6;
+$daffy: #ffc668;
+$calm: rgba(115,207,205,0.32);
+$iced: #bdfbff;
+
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 14px;
