--- a/resources/assets/sass/_admin-section.scss
+++ b/resources/assets/sass/_admin-section.scss
@@ -1,24 +1,37 @@
 .admin-menu {
-
-  background-color: #efefef;
-  box-shadow: 0px 0 1px #000;
-  height: 94.5vh;
+  min-height: 100vh;
 
   &__links {
     padding-left: 0;
+    list-style: none;
+  }
+
+  &__link-item{
+    padding: 0 14px;
+  }
+
+  &__link-active{
+    border-top: 1px solid $concrete;
+    border-bottom: 1px solid $concrete;
   }
 
   &__link {
-
+    display: block;
     color: #000;
+    padding: 14px 0;
     text-decoration: none;
-    font-size: 18px;
+    font-family: $opensans;
+    font-size: 15px;
+    text-transform: uppercase;
+    border-bottom: 1px solid $focused;
+
+    .admin-menu__link-active &{
+      border-bottom: none;
+      font-family: $opensanssemibold;
+    }
 
     &:hover {
-      background-color: #C1C1C1;
-    }
-    &--active {
-
+      color: $focused;
     }
   }
 
