--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -1,49 +1,66 @@
-.accordion {
-  &__heading {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
+
+label {
+  color: $concrete;
+  font-size: 15px;
+  display: block;
+  margin: 0;
+  font-weight: normal;
+  line-height: 1.8;
+}
+
+[type='text'], [type='password'], [type='date'], [type='datetime'], [type='datetime-local'], [type='month'], [type='week'], [type='email'], [type='number'], [type='search'], [type='tel'], [type='time'], [type='url'], [type='color'], textarea {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 2.4375rem;
+  padding: 0.5rem;
+  border: 1px solid $calm;
+  margin: 0 0 0.5rem;
+  font-family: inherit;
+  font-size: 1rem;
+  color: #0a0a0a;
+  background-color: #fefefe;
+  box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
+  border-radius: 0.3rem;
+  -webkit-transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+  transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  &:hover {
+    border: 1px solid $concrete;
+    -webkit-transition: border-color 0.25s ease-in-out;
+    transition: border-color 0.25s ease-in-out;
+  }
+
+  &:focus {
+    border: 1px solid $calm;
+    background-color: $iced;
     outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-
-    &--active, &:hover {
-      background-color: #ddd;
-    }
-
-    &--disabled {
-      opacity: 0.65;
-      cursor: not-allowed;
-    }
+    box-shadow: 0 0 5px #cacaca;
+    -webkit-transition: box-shadow 0.5s, border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    transition: box-shadow 0.5s, border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
   }
 
-  &__content {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: 0.6s ease-in-out;
-    opacity: 0;
-
-    &--active {
-      opacity: 1;
-      max-height: 1500px;
-    }
+  &[disabled] {
+    border: 1px solid $slate;
+    background-color: transparent;
   }
 
-  input:valid,
-  input:in-range {
-    background:hsl(120, 50%, 90%);
-    border-color:hsl(120, 50%, 50%);
+  .has-error & {
+    border-color: $blazed;
+  }
+}
+
+.has-error {
+
+  .help-block {
+    color: $blazed;
+    font-style: italic;
   }
 
-  /*input:invalid,
-  input:out-of-range {
-    border-color:hsl(0, 50%, 50%);
-    background:hsl(0, 50%, 90%);
-  }*/
+}
+
+input + input, label + label {
+  margin-top: 1rem;
 }
