--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,11 +1,9 @@
 .header {
-
-  border-bottom: 1px solid #636b6f;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 20px 0;
+  color: $white;
 
   &__link {
-    color: #636b6f;
+    color: $white;
     padding: 0 25px;
     font-size: 12px;
     font-weight: 600;
