--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -7,19 +7,48 @@ body, html{
 }
 
 .main-content{
-  padding: 1rem 2rem;
+  padding: 2rem;
 }
 
-.-text-center {
+.--mt0{ margin-top: 0; }
+.--mt1{ margin-top: 1rem; }
+.--mt2{ margin-top: 2rem; }
+.--mt3{ margin-top: 3rem; }
+.--mt4{ margin-top: 4rem; }
+.--mt5{ margin-top: 5rem; }
+
+.--mb0{ margin-bottom: 0; }
+.--mb1{ margin-bottom: 1rem; }
+.--mb2{ margin-bottom: 2rem; }
+.--mb3{ margin-bottom: 3rem; }
+.--mb4{ margin-bottom: 4rem; }
+.--mb5{ margin-bottom: 5rem; }
+
+.--pt0{ padding-top: 0; }
+.--pt1{ padding-top: 1rem; }
+.--pt2{ padding-top: 2rem; }
+.--pt3{ padding-top: 3rem; }
+.--pt4{ padding-top: 4rem; }
+.--pt5{ padding-top: 5rem; }
+
+.--pb0{ padding-bottom: 0; }
+.--pb1{ padding-bottom: 1rem; }
+.--pb2{ padding-bottom: 2rem; }
+.--pb3{ padding-bottom: 3rem; }
+.--pb4{ padding-bottom: 4rem; }
+.--pb5{ padding-bottom: 5rem; }
+
+.--border-wrap{
+    border-left: 1px solid $slate;
+    padding-left: 1rem;
+}
+
+.--text-center {
   text-align: center;
 }
 
-.-text-right {
+.--text-right {
   text-align: right;
-}
-
-.-margin-bottom-0 {
-  margin-bottom: 0;
 }
 
 // Spinner
