--- a/resources/assets/sass/_headings.scss
+++ b/resources/assets/sass/_headings.scss
@@ -1,11 +1,32 @@
-h1, .h1{
-  color: $focused;
-  font-size: 36px;
-  line-height: 27px;
-  font-family: $opensanssemibold;
+h1, .h1 {
+    font-size: 36px;
+    line-height: 27px;
+    font-family: $opensanssemibold;
 }
-h2, .h2{ }
-h3, .h3{ }
-h4, .h4{ }
-h5, .h5{ }
-h6, .h6{ }
+
+h2, .h2 {
+    font-size: 24px;
+    line-height: 1;
+    font-family: $opensanssemibold;
+}
+
+h3, .h3 {
+    font-size: 20px;
+    line-height: 1;
+    font-family: $opensanssemibold;
+}
+
+h4, .h4 {
+    font-size: 18px;
+    line-height: 1;
+    font-family: $opensanssemibold;
+    margin: 0;
+}
+
+h5, .h5 {
+
+}
+
+h6, .h6 {
+
+}
