--- a/resources/assets/sass/_tables.scss
+++ b/resources/assets/sass/_tables.scss
@@ -1,69 +1,79 @@
 // Table styles
 
-.table{
+.table {
 
-  &__row{
-    background-color: $clouded;
-    border-left: 1px solid $focused;
-    border-right: 1px solid $focused;
+    &__row {
+        background-color: $clouded;
+        border-left: 1px solid $focused;
+        border-right: 1px solid $focused;
 
-    &.even{
-      background-color: $white;
+        &.even {
+            background-color: $white;
+        }
+        &.first {
+            border-top: 1px solid $focused;
+        }
+        &.last {
+            border-bottom: 1px solid $focused;
+        }
+        &--add:hover{
+            border-left: 1px solid $breeze;
+            border-right: 1px solid $breeze;
+        }
     }
-    &.first{
-      border-top: 1px solid $focused;
-    }
-    &.last{
-      border-bottom: 1px solid $focused;
-    }
-  }
 }
 
 .accordion {
-  &__heading {
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+    &__heading {
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
 
-    &--active, &:hover {
-      background-color: #ddd;
+        &--active, &:hover {
+            background-color: #ddd;
+        }
+
+        &--disabled {
+            opacity: 0.65;
+            cursor: not-allowed;
+        }
+        &--add {
+            background-color: $focused;
+            &:hover {
+                background-color: $breeze;
+                color: $focused;
+            }
+        }
     }
 
-    &--disabled {
-      opacity: 0.65;
-      cursor: not-allowed;
+    &__content {
+        padding: 0 1rem;
+        max-height: 0;
+        overflow: hidden;
+        transition: 0.6s ease-in-out;
+        opacity: 0;
+
+        &--active {
+            padding: 1rem;
+            opacity: 1;
+            max-height: 1500px;
+        }
     }
-  }
 
-  &__content {
-    padding: 0 1rem;
-    max-height: 0;
-    overflow: hidden;
-    transition: 0.6s ease-in-out;
-    opacity: 0;
-
-    &--active {
-      padding: 1rem;
-      opacity: 1;
-      max-height: 1500px;
+    input:valid,
+    input:in-range {
+        background: hsl(120, 50%, 90%);
+        border-color: hsl(120, 50%, 50%);
     }
-  }
 
-  input:valid,
-  input:in-range {
-    background: hsl(120, 50%, 90%);
-    border-color: hsl(120, 50%, 50%);
-  }
-
-  /*input:invalid,
-  input:out-of-range {
-    border-color:hsl(0, 50%, 50%);
-    background:hsl(0, 50%, 90%);
-  }*/
+    /*input:invalid,
+    input:out-of-range {
+      border-color:hsl(0, 50%, 50%);
+      background:hsl(0, 50%, 90%);
+    }*/
 }
