--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -63,9 +63,14 @@
 @import "headings";
 @import "tables";
 
+@import "stats-box";
 
 @import "header";
 @import "form";
 @import "global";
 
+@import "page";
 @import "admin-section";
+@import "home";
+@import "login";
+@import "application";
