--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -64,3 +64,40 @@ label {
 input + input, label + label {
   margin-top: 1rem;
 }
+
+input[type="checkbox"]{
+
+  display:none;
+
+  + label:after {
+    content: "";
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-1px 4px 0 0;
+    vertical-align:middle;
+    background: $white;
+    cursor:pointer;
+    border: 1px solid $breeze;
+    border-radius: 3px;
+    margin-left: 10px;
+  }
+
+  + label:hover:after {
+    background-color: $iced;
+  }
+
+  &:checked + label:after {
+    content: "\2713";
+  }
+
+}
+
+.styled-select select {
+  background: transparent;
+  border-radius: 3px;
+  -webkit-appearance: none;
+  border: 1px solid $calm;
+  box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
+}
+
