Major update - items, documents, contract items all in, emails now tested.

--- a/resources/assets/sass/_page.scss
+++ b/resources/assets/sass/_page.scss
@@ -12,7 +12,7 @@
 
   &__footer{
     background-color: $white;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     padding: 1rem 0;
