--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -71,6 +71,7 @@
 
 @import "page";
 @import "admin-section";
-@import "home";
-@import "login";
-@import "application";
+@import "page-home";
+@import "page-login";
+@import "page-application";
+@import "page-items";
