--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3206,7 +3206,7 @@ body, html {
 
 .page__footer {
   background-color: #ffffff;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   padding: 1rem 0; }
@@ -3256,7 +3256,8 @@ body, html {
 .page-home {
   background-image: url("/img/home-bg.png");
   background-size: cover;
-  min-height: 100vh; }
+  min-height: 100vh;
+  padding-bottom: 100px; }
   .page-home__header {
     margin-top: 5vh; }
   .page-home__line {
@@ -3338,5 +3339,19 @@ body, html {
 
 .application-step__line {
   border: solid 1px #9a989b; }
+
+.page-items .selected-unit-types__name {
+  font-size: 14px;
+  margin: 5px; }
+
+.page-items .selected-unit-types__remove {
+  font-size: 14px;
+  margin: 5px;
+  color: #9a989b;
+  cursor: pointer; }
+
+.page-items .selected-unit-types__line {
+  border: none;
+  border-top: 1px solid #9a989b; }
 
 /*# sourceMappingURL=app.css.map */
