--- a/resources/assets/sass/_page-home.scss
+++ b/resources/assets/sass/_page-home.scss
@@ -2,6 +2,7 @@
   background-image: url("/img/home-bg.png");
   background-size: cover;
   min-height: 100vh;
+  padding-bottom: 100px;
 
   &__header{
     margin-top: 5vh;
