--- a/resources/assets/sass/_tables.scss
+++ b/resources/assets/sass/_tables.scss
@@ -20,6 +20,10 @@
             border-left: 1px solid $breeze;
             border-right: 1px solid $breeze;
         }
+        &--padded{
+            padding: 18px
+        }
+
     }
 }
 
@@ -33,6 +37,7 @@
         outline: none;
         font-size: 15px;
         transition: 0.4s;
+        color: #0a0a0a;
 
         &--active, &:hover {
             background-color: #ddd;
