--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4058,6 +4058,10 @@ body, html {
   text-align: right;
 }
 
+.--expanded {
+  width: 100%;
+}
+
 .windows8 {
   position: relative;
   width: 24px;
