Added loading symbols to the buttons.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4244,6 +4244,11 @@ body, html {
   }
 }
 
+.--loading-expander {
+  width: 70px;
+  display: inline-block;
+}
+
 .page__header {
   margin-top: 5vh;
 }
