--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -10,6 +10,9 @@ body, html{
   padding: 2rem;
 }
 
+.--m0{ margin: 0; }
+.--p0{ padding: 0; }
+
 .--mt0{ margin-top: 0; }
 .--mt1{ margin-top: 1rem; }
 .--mt2{ margin-top: 2rem; }
