--- a/resources/assets/sass/_headings.scss
+++ b/resources/assets/sass/_headings.scss
@@ -30,3 +30,11 @@ h5, .h5 {
 h6, .h6 {
 
 }
+
+.title-bar {
+    background-color: $clouded;
+    border: solid 1px $mist;
+    display: block;
+    padding: 12px 18px;
+    color: $concrete;
+}
