--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,29 +1,34 @@
 .header {
-    padding: 20px 0;
+  padding: 20px 0;
+  color: $white;
+
+  &__logo {
+    margin: 1rem 0 2rem;
+    display: block;
+    text-align: center;
+  }
+
+  &__link {
     color: $white;
+    padding: 0 25px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: $opensans;
 
-    &__logo {
-        margin: 1rem 0 2rem;
-        display: block;
-        text-align: center;
+    &--active {
+      border-radius: 2.7px;
     }
 
-    &__link {
-        color: $white;
-        padding: 0 25px;
-        font-size: 12px;
-        font-weight: 600;
-        letter-spacing: .1rem;
-        text-decoration: none;
-        text-transform: uppercase;
-
-        &--nav {
-            &:hover {
-                color: #000;
-                box-shadow: 0 -1px 0 #000;
-                transition: 700ms box-shadow;
-            }
-        }
-
+    &--nav {
+      &:hover {
+        color: #000;
+        box-shadow: 0 -1px 0 #000;
+        transition: 700ms box-shadow;
+      }
     }
+
+  }
 }
