--- a/resources/assets/sass/_page-contract.scss
+++ b/resources/assets/sass/_page-contract.scss
@@ -1,14 +1,13 @@
-.contract{
-    ol {
-        counter-reset: section;                /* Creates a new instance of the
-                                            section counter with each ol
-                                            element */
-        list-style-type: none;
-    }
+.contract {
+  ol {
+    counter-reset: section;
+    list-style-type: none;
 
-    li::before {
-        counter-increment: section;
-        content: counters(section,".") " ";
-        font-weight: bold;
+    > li::before {
+      counter-increment: section;
+      content: counters(section, ".") " ";
+      font-weight: bold;
     }
+  }
+
 }
