Fixed issue with unit filter not loading correct unit data and update for filtered units not working.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -486,6 +486,8 @@ button {
   margin-right: auto;
   display: -webkit-box;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-flow: row wrap;
 }
 
