Updates and fixes to Application process and testing

--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -67,7 +67,7 @@ input + input, label + label {
 
 input[type="checkbox"] {
 
-  display: none;
+  // display: none;
 
   + label:before {
     content: "";
