--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -54,6 +54,7 @@
 
 // Third Party
 @import "third_party/dropzone";
+@import "third_party/vue-flatpickr";
 @import "node_modules/sweetalert/dev/sweetalert";
 
 // Sites imports
