Various updates and fixes to application process and user flow. Some styling and layout changes around application pages.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4536,6 +4536,11 @@ label {
 
 input + input, label + label {
   margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+input[type="checkbox"] {
+  display: none;
 }
 
 input[type="checkbox"] + label:before {
@@ -4543,7 +4548,6 @@ input[type="checkbox"] + label:before {
   display: inline-block;
   width: 19px;
   height: 19px;
-  margin: -1px 4px 0 0;
   vertical-align: middle;
   background: #ffffff;
   cursor: pointer;
