updates to user listing page. added emails for contract renewal and cancellation.

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -76,6 +76,12 @@ body, html{
   margin: auto;
 }
 
+.--right{
+  float:right;
+  float:right;
+  padding-right: 4rem;
+}
+
 .windows8 .wBall {
   position: absolute;
   width: 23px;
