--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4723,6 +4723,12 @@ body, html {
   margin: auto;
 }
 
+.--right {
+  float: right;
+  float: right;
+  padding-right: 4rem;
+}
+
 .windows8 .wBall {
   position: absolute;
   width: 23px;
