--- a/resources/assets/sass/_page-contract.scss
+++ b/resources/assets/sass/_page-contract.scss
@@ -1,7 +1,12 @@
 .contract {
   .h4{
-    margin-bottom: 20px;
+    margin: 40px 0px 20px;
   }
+
+  .--text-center{
+    margin: 10px 0px;
+  }
+
   ol {
     counter-reset: section;
     list-style-type: none;
