General fixes for application and contract management, as well as unit testing

--- a/resources/assets/sass/_page-contract.scss
+++ b/resources/assets/sass/_page-contract.scss
@@ -1,12 +1,7 @@
 .contract {
   .h4{
-    margin: 40px 0px 20px;
+    margin-bottom: 20px;
   }
-
-  .--text-center{
-    margin: 10px 0px;
-  }
-
   ol {
     counter-reset: section;
     list-style-type: none;
