--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5143,11 +5143,7 @@ body, html {
 }
 
 .contract .h4 {
-  margin: 40px 0px 20px;
-}
-
-.contract .--text-center {
-  margin: 10px 0px;
+  margin-bottom: 20px;
 }
 
 .contract ol {
