--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4281,6 +4281,12 @@ body.stop-scrolling {
   color: #ff7902;
 }
 
+.lease-button {
+  padding: 10px;
+  margin-top: 30px;
+  font-size: 14px;
+}
+
 h1, .h1 {
   font-size: 36px;
   line-height: 27px;
@@ -4397,6 +4403,23 @@ h4, .h4 {
 .accordion input:in-range {
   background: #d9f2d9;
   border-color: #40bf40;
+}
+
+.table-head {
+  border-bottom: none;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 0px 5px 10px 0px;
+}
+
+.table-row {
+  border-color: #e6e7e8;
+  font-size: 13px;
+  padding: 5px 5px 5px 0px;
+}
+
+.table-row.even {
+  background: #FCFCFC;
 }
 
 .stats-box {
