--- a/resources/assets/sass/_tables.scss
+++ b/resources/assets/sass/_tables.scss
@@ -82,3 +82,22 @@
       background:hsl(0, 50%, 90%);
     }*/
 }
+
+
+.table-head{
+    border-bottom: none;
+    font-size: 16px;
+    font-weight: 300;
+    padding: 0px 5px 10px 0px;
+}
+
+.table-row{
+
+    border-color: #e6e7e8;
+    font-size: 13px;
+    padding: 5px 5px 5px 0px;
+
+    &.even{
+        background: #FCFCFC;
+    }
+}
