--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -115,6 +115,24 @@
     }
   }
 
+  &--request-changes{
+    background-color: $white;
+    border-color: $alarmed;
+    color: $alarmed;
+
+    &:hover{
+      background-color: $alarmed;
+      border-color: $alarmed;
+      color: $white;
+    }
+
+    &:active, &:focus{
+      background-color: $alarmed;
+      border-color: $alarmed;
+      color: $blazed;
+    }
+  }
+
   &--pending{
     background-color: $white;
     border-color: $alarmed;
